log/build_2023-02-01_09-48-22/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/graphTest.py", line 187
    j.pos = tf2_geometry_msgs.tf2_geometry_msgs.do_transform_point(j.frame_pos, transform)
    ^
SyntaxError: invalid syntax

